time-out/istio-timeout-poc/client-server-request/pod-1.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  labels:
    name: pod-1
spec:
  containers:
    - name: nginx-1
      image: deminy/delayed-http-response:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pod-1-service
spec:
  selector:
    name: pod-1
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
