time-out/istio-timeout-poc/client-server-request/pod-2.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  labels:
    name: pod-2
spec:
  containers:
    - name: pod-2
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pod-2-service
spec:
  selector:
    name: pod-2
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
