time-out/istio-timeout-poc/client-server-request/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pod-2-vs
spec:
  hosts:
    - pod-2-service.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: pod-2-service.default.svc.cluster.local
      timeout: 3s
